# advent-of-code

./: .gitmodules  .rusty-hook.toml  Cargo.toml  Justfile  README.md  rust-toolchain.toml
2023/day-1/src/: part1.rs  part2.rs
2023/day-2/: Cargo.toml
2023/day-3/: Cargo.toml
2023/day-3/src/: part1.rs  part2.rs
2023/day-4/: Cargo.toml
2023/day-4/src/: part1.rs  part2.rs
2023/day-5/src/: part2.rs
2023/day-6/: Cargo.toml
2023/day-6/src/: part1.rs
crates/ftp-server/src/: ftp.rs  main.rs
crates/sorting/: Cargo.toml
crates/sorting/benches/: sorting_benchmark.rs
crates/sorting/src/: cli.rs  lib.rs  main.rs  utils.rs
crates/sorting/src/algorithm/: heap.rs  insertion.rs  merge.rs  mod.rs  quick.rs  radix.rs  selection.rs  shell.rs
daily-template/: Cargo.toml
daily-template/src/: part1.rs
day-1/: Cargo.toml
day-2/: Cargo.toml
day-2/src/: part1.rs  part2.rs
day-3/: Cargo.toml
day-3/src/: part1.rs  part2.rs
day-4/: Cargo.toml
day-5/: Cargo.toml
day-5/src/: part1.rs
day-6/src/: part2.rs
experiments/clip/: Cargo.toml
experiments/clip/src/: cli.rs  main.rs
experiments/miette/: Cargo.toml
experiments/miette/src/: main.rs
experiments/sorting/src/: lib.rs  utils.rs
experiments/sorting/src/algorithm/: heap.rs  merge.rs  quick.rs  selection.rs
