[workspace]
resolver = "2"
members = ["experiments/*", "2023/day-*"]
default-members = ["2023/day-*"]

[workspace.dependencies]
glam = "0.24.2"
itertools = "0.12.0"
miette = { version = "5.10.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
rstest = "0.18.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
rayon = "1.8.0"
indicatif = { version = "0.17.7", features = ["rayon"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]

[profile.release]
debug = 1
incremental = true
# This is set to true in CI
lto = false

[profile.dev.package.backtrace]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
