[package]
name = "sorting"
authors = ["Pablo Hernandez (@Hadronomy)"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = [
    "derive",
    "unicode",
    "env",
    "color",
    "wrap_help",
] }
color-eyre = "0.6.2"
colored = "2.0.0"
config = "0.13.3"
dialoguer = { version = "0.10.3", features = [
    "fuzzy-select",
    "history",
    "completion",
    "fuzzy-matcher",
] }
eyre = "0.6.8"
owo-colors = "3.5.0"
thiserror = "1.0.38"

[dev-dependencies]
rusty-hook = "0.11.2"
